Kubernetes/K8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  express-deployement
spec:
  replicas: 2
  selector:
    matchLabels:
      app: express
  template:
    metadata:
      labels:
        app: express
    spec:
      containers:
      - name:  express-container
        image: cohort_2_express
        imagePullPolicy: Always
        ports:
         - containerPort: 3000
        resources:
          limits:
           memory: "128Mi"
           cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
